syntax = "proto3";
option go_package = "proto/user";
package user;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

service UserService {
	rpc AddUser (AddUserRequest) returns (User);
	rpc DelectUser (DeleteUserRequest) returns (User);
	rpc ListUsers(ListUsersRequest) returns (stream User);
}

enum Role {
	GUEST = 0;
	ADMIN = 1;
	MEMBER= 2;
}
message User {
	string id = 1;
	Role role = 2;
	google.protobuf.Timestamp created_at = 3;
}
message UserRole {
	Role role = 1;
}
message AddUserRequest {
	Role role =1;
}

message DeleteUserRequest {
	string id = 1;
}

message ListUsersRequest {
	// Only list users created after this timestamp
	google.protobuf.Timestamp created_since = 1;
	// Only list users older than this Duration
	google.protobuf.Duration older_than = 2;
}

